--- a/Samples/DrawPrimitives/CMakeLists.txt
+++ b/Samples/DrawPrimitives/CMakeLists.txt
@@ -287,6 +287,8 @@ elseif (BUILD_IOS)
 
 	# link framework
 	target_link_libraries(SampleDrawPrimitives "-framework UIKit")
+	target_link_libraries(SampleDrawPrimitives "-framework CoreGraphics")
+	target_link_libraries(SampleDrawPrimitives "-framework AudioToolbox")
 else()
 	add_executable(SampleDrawPrimitives ${application_source})
 endif()
