--- a/Samples/Lightmap/CMakeLists.txt
+++ b/Samples/Lightmap/CMakeLists.txt
@@ -292,6 +292,8 @@ elseif (BUILD_IOS)
 
 	# link framework
 	target_link_libraries(SampleLightmap "-framework UIKit")
+	target_link_libraries(SampleLightmap "-framework CoreGraphics")
+	target_link_libraries(SampleLightmap "-framework AudioToolbox")
 else()
 	add_executable(SampleLightmap ${application_source})
 endif()
