--- a/Samples/Lightmapping/CMakeLists.txt
+++ b/Samples/Lightmapping/CMakeLists.txt
@@ -292,6 +292,8 @@ elseif (BUILD_IOS)
 
 	# link framework
 	target_link_libraries(SampleLightmapping "-framework UIKit")
+	target_link_libraries(SampleLightmapping "-framework CoreGraphics")
+	target_link_libraries(SampleLightmapping "-framework AudioToolbox")
 else()
 	add_executable(SampleLightmapping ${application_source})
 endif()
