Fix iOS linking audio framework

--- a/Samples/Audio/CMakeLists.txt
+++ b/Samples/Audio/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleAudio "-framework UIKit")
 	target_link_libraries(SampleAudio "-framework CoreGraphics")
 	target_link_libraries(SampleAudio "-framework AudioToolbox")
+	target_link_libraries(SampleAudio "-framework AVFAudio")
 else()
 	add_executable(SampleAudio ${application_source})
 endif()
