--- a/Samples/BlendShape/CMakeLists.txt
+++ b/Samples/BlendShape/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleBlendShape "-framework UIKit")
 	target_link_libraries(SampleBlendShape "-framework CoreGraphics")
 	target_link_libraries(SampleBlendShape "-framework AudioToolbox")
+	target_link_libraries(SampleBlendShape "-framework AVFAudio")
 else()
 	add_executable(SampleBlendShape ${application_source})
 endif()
