--- a/Samples/Instancing/CMakeLists.txt
+++ b/Samples/Instancing/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleInstancing "-framework UIKit")
 	target_link_libraries(SampleInstancing "-framework CoreGraphics")
 	target_link_libraries(SampleInstancing "-framework AudioToolbox")
+	target_link_libraries(SampleInstancing "-framework AVFAudio")
 else()
 	add_executable(SampleInstancing ${application_source})
 endif()
