--- a/Samples/Lightmap/CMakeLists.txt
+++ b/Samples/Lightmap/CMakeLists.txt
@@ -294,6 +294,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleLightmap "-framework UIKit")
 	target_link_libraries(SampleLightmap "-framework CoreGraphics")
 	target_link_libraries(SampleLightmap "-framework AudioToolbox")
+	target_link_libraries(SampleLightmap "-framework AVFAudio")
 else()
 	add_executable(SampleLightmap ${application_source})
 endif()
