--- a/Samples/LightmapUV/CMakeLists.txt
+++ b/Samples/LightmapUV/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleLightmapUV "-framework UIKit")
 	target_link_libraries(SampleLightmapUV "-framework CoreGraphics")
 	target_link_libraries(SampleLightmapUV "-framework AudioToolbox")
+	target_link_libraries(SampleLightmapUV "-framework AVFAudio")
 else()
 	add_executable(SampleLightmapUV ${application_source})
 endif()
