--- a/Samples/Lightmapping/CMakeLists.txt
+++ b/Samples/Lightmapping/CMakeLists.txt
@@ -294,6 +294,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleLightmapping "-framework UIKit")
 	target_link_libraries(SampleLightmapping "-framework CoreGraphics")
 	target_link_libraries(SampleLightmapping "-framework AudioToolbox")
+	target_link_libraries(SampleLightmapping "-framework AVFAudio")
 else()
 	add_executable(SampleLightmapping ${application_source})
 endif()
