--- a/Samples/LightmappingDirectional/CMakeLists.txt
+++ b/Samples/LightmappingDirectional/CMakeLists.txt
@@ -294,6 +294,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleLightmappingDirectional "-framework UIKit")
 	target_link_libraries(SampleLightmappingDirectional "-framework CoreGraphics")
 	target_link_libraries(SampleLightmappingDirectional "-framework AudioToolbox")
+	target_link_libraries(SampleLightmappingDirectional "-framework AVFAudio")
 else()
 	add_executable(SampleLightmappingDirectional ${application_source})
 endif()
