--- a/Samples/LuckyDraw/CMakeLists.txt
+++ b/Samples/LuckyDraw/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleLuckyDraw "-framework UIKit")
 	target_link_libraries(SampleLuckyDraw "-framework CoreGraphics")
 	target_link_libraries(SampleLuckyDraw "-framework AudioToolbox")
+	target_link_libraries(SampleLuckyDraw "-framework AVFAudio")
 else()
 	add_executable(SampleLuckyDraw ${application_source})
 endif()
