--- a/Samples/Materials/CMakeLists.txt
+++ b/Samples/Materials/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleMaterials "-framework UIKit")
 	target_link_libraries(SampleMaterials "-framework CoreGraphics")
 	target_link_libraries(SampleMaterials "-framework AudioToolbox")
+	target_link_libraries(SampleMaterials "-framework AVFAudio")
 else()
 	add_executable(SampleMaterials ${application_source})
 endif()
