--- a/Samples/Noise3D/CMakeLists.txt
+++ b/Samples/Noise3D/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleNoise3D "-framework UIKit")
 	target_link_libraries(SampleNoise3D "-framework CoreGraphics")
 	target_link_libraries(SampleNoise3D "-framework AudioToolbox")
+	target_link_libraries(SampleNoise3D "-framework AVFAudio")
 else()
 	add_executable(SampleNoise3D ${application_source})
 endif()
