--- a/Samples/Particles/CMakeLists.txt
+++ b/Samples/Particles/CMakeLists.txt
@@ -290,6 +290,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleParticles "-framework UIKit")
 	target_link_libraries(SampleParticles "-framework CoreGraphics")
 	target_link_libraries(SampleParticles "-framework AudioToolbox")
+	target_link_libraries(SampleParticles "-framework AVFAudio")
 else()
 	add_executable(SampleParticles ${application_source})
 endif()
