--- a/Samples/ParticlesVortex/CMakeLists.txt
+++ b/Samples/ParticlesVortex/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleParticlesVortex "-framework UIKit")
 	target_link_libraries(SampleParticlesVortex "-framework CoreGraphics")
 	target_link_libraries(SampleParticlesVortex "-framework AudioToolbox")
+	target_link_libraries(SampleParticlesVortex "-framework AVFAudio")
 else()
 	add_executable(SampleParticlesVortex ${application_source})
 endif()
