--- a/Samples/SkinnedMesh/CMakeLists.txt
+++ b/Samples/SkinnedMesh/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleSkinnedMesh "-framework UIKit")
 	target_link_libraries(SampleSkinnedMesh "-framework CoreGraphics")
 	target_link_libraries(SampleSkinnedMesh "-framework AudioToolbox")
+	target_link_libraries(SampleSkinnedMesh "-framework AVFAudio")
 else()
 	add_executable(SampleSkinnedMesh ${application_source})
 endif()
