--- a/Samples/Sponza/CMakeLists.txt
+++ b/Samples/Sponza/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleSponza "-framework UIKit")
 	target_link_libraries(SampleSponza "-framework CoreGraphics")
 	target_link_libraries(SampleSponza "-framework AudioToolbox")
+	target_link_libraries(SampleSponza "-framework AVFAudio")
 else()
 	add_executable(SampleSponza ${application_source})
 endif()
