--- a/Samples/TankScene/CMakeLists.txt
+++ b/Samples/TankScene/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleTankScene "-framework UIKit")
 	target_link_libraries(SampleTankScene "-framework CoreGraphics")
 	target_link_libraries(SampleTankScene "-framework AudioToolbox")
+	target_link_libraries(SampleTankScene "-framework AVFAudio")
 else()
 	add_executable(SampleTankScene ${application_source})
 endif()
