--- a/Samples/Collision/CMakeLists.txt
+++ b/Samples/Collision/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleCollision "-framework UIKit")
 	target_link_libraries(SampleCollision "-framework CoreGraphics")
 	target_link_libraries(SampleCollision "-framework AudioToolbox")
+	target_link_libraries(SampleCollision "-framework AVFAudio")
 else()
 	add_executable(SampleCollision ${application_source})
 endif()
