--- a/Samples/DrawPrimitives/CMakeLists.txt
+++ b/Samples/DrawPrimitives/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleDrawPrimitives "-framework UIKit")
 	target_link_libraries(SampleDrawPrimitives "-framework CoreGraphics")
 	target_link_libraries(SampleDrawPrimitives "-framework AudioToolbox")
+	target_link_libraries(SampleDrawPrimitives "-framework AVFAudio")
 else()
 	add_executable(SampleDrawPrimitives ${application_source})
 endif()
