--- a/Samples/HelloWorld/CMakeLists.txt
+++ b/Samples/HelloWorld/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleHelloWorld "-framework UIKit")
 	target_link_libraries(SampleHelloWorld "-framework CoreGraphics")
 	target_link_libraries(SampleHelloWorld "-framework AudioToolbox")
+	target_link_libraries(SampleHelloWorld "-framework AVFAudio")
 else()
 	add_executable(SampleHelloWorld ${application_source})
 endif()
