--- a/Samples/LightmappingVertex/CMakeLists.txt
+++ b/Samples/LightmappingVertex/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleLightmappingVertex "-framework UIKit")
 	target_link_libraries(SampleLightmappingVertex "-framework CoreGraphics")
 	target_link_libraries(SampleLightmappingVertex "-framework AudioToolbox")
+	target_link_libraries(SampleLightmappingVertex "-framework AVFAudio")
 else()
 	add_executable(SampleLightmappingVertex ${application_source})
 endif()
