--- a/Samples/Noise2D/CMakeLists.txt
+++ b/Samples/Noise2D/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleNoise2D "-framework UIKit")
 	target_link_libraries(SampleNoise2D "-framework CoreGraphics")
 	target_link_libraries(SampleNoise2D "-framework AudioToolbox")
+	target_link_libraries(SampleNoise2D "-framework AVFAudio")
 else()
 	add_executable(SampleNoise2D ${application_source})
 endif()
