--- a/Samples/ParticlesExplosion/CMakeLists.txt
+++ b/Samples/ParticlesExplosion/CMakeLists.txt
@@ -290,6 +290,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleParticlesExplosion "-framework UIKit")
 	target_link_libraries(SampleParticlesExplosion "-framework CoreGraphics")
 	target_link_libraries(SampleParticlesExplosion "-framework AudioToolbox")
+	target_link_libraries(SampleParticlesExplosion "-framework AVFAudio")
 else()
 	add_executable(SampleParticlesExplosion ${application_source})
 endif()
