--- a/Samples/ParticlesMagicSkill/CMakeLists.txt
+++ b/Samples/ParticlesMagicSkill/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleParticlesMagicSkill "-framework UIKit")
 	target_link_libraries(SampleParticlesMagicSkill "-framework CoreGraphics")
 	target_link_libraries(SampleParticlesMagicSkill "-framework AudioToolbox")
+	target_link_libraries(SampleParticlesMagicSkill "-framework AVFAudio")
 else()
 	add_executable(SampleParticlesMagicSkill ${application_source})
 endif()
