--- a/Samples/Shader/CMakeLists.txt
+++ b/Samples/Shader/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleShader "-framework UIKit")
 	target_link_libraries(SampleShader "-framework CoreGraphics")
 	target_link_libraries(SampleShader "-framework AudioToolbox")
+	target_link_libraries(SampleShader "-framework AVFAudio")
 else()
 	add_executable(SampleShader ${application_source})
 endif()
