--- a/Samples/SocketIO/CMakeLists.txt
+++ b/Samples/SocketIO/CMakeLists.txt
@@ -305,6 +305,7 @@ elseif (BUILD_IOS)
 	target_link_libraries(SampleSocketIO "-framework UIKit")
 	target_link_libraries(SampleSocketIO "-framework CoreGraphics")
 	target_link_libraries(SampleSocketIO "-framework AudioToolbox")
+	target_link_libraries(SampleSocketIO "-framework AVFAudio")
 else()
 	add_executable(SampleSocketIO ${application_source})
 endif()
