Rename Template Project to Main

--- a/Samples/Materials/CMakeLists.txt
+++ b/Samples/Materials/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Samples/Materials/Source
-	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Main/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Irrlicht/Include
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/System/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Engine/Source
@@ -17,7 +17,7 @@ if (BUILD_IMGUI)
 	include_directories(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Imgui/Source)
 endif()
 
-set(template_path ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template)
+set(template_path ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Main)
 
 file(GLOB_RECURSE application_source 
 	./Source/**.cpp 
@@ -26,8 +26,8 @@ file(GLOB_RECURSE application_source
 
 setup_project_group("${application_source}" ${CMAKE_CURRENT_SOURCE_DIR})
 
-list (APPEND application_source ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Source/pch.cpp)
-list (APPEND application_source ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Source/pch.h)
+list (APPEND application_source ${template_path}/Source/pch.cpp)
+list (APPEND application_source ${template_path}/Source/pch.h)
 
 if (BUILD_ANDROID)
 	file(GLOB_RECURSE platform_android_source 
@@ -43,18 +43,18 @@ if (BUILD_WINDOWS_STORE)
 	file(MAKE_DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Materials/Assets)
 	
 	file(GLOB uwp_assets 
-		${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/UWP/Assets/**.*
+		${template_path}/Platforms/UWP/Assets/**.*
 		${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/**.zip)
 	
 	foreach(asset_file ${uwp_assets})
 		file(COPY "${asset_file}" DESTINATION ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Materials/Assets)
 	endforeach()
 
-	file(COPY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/UWP/Package.appxmanifest
+	file(COPY ${template_path}/Platforms/UWP/Package.appxmanifest
 		DESTINATION 
 		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Materials)
 		
-	file(COPY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/UWP/TemporaryKey.pfx
+	file(COPY ${template_path}/Platforms/UWP/TemporaryKey.pfx
 		DESTINATION 
 		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Materials)
 
@@ -73,7 +73,7 @@ if (BUILD_WINDOWS_STORE)
 endif()
 
 if (MSVC OR CYGWIN OR MINGW)
-	include_directories(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/Win32)
+	include_directories(${template_path}/Platforms/Win32)
 
 	file(GLOB_RECURSE platform_win32_source 
 		${template_path}/Platforms/Win32/**.cpp 
@@ -294,7 +294,7 @@ else()
 	add_executable(SampleMaterials ${application_source})
 endif()
 
-target_precompiled_header(SampleMaterials ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Source/pch.cpp ${application_source})
+target_precompiled_header(SampleMaterials ${template_path}/Source/pch.cpp ${application_source})
 
 # Linker
 if (BUILD_ANDROID)
@@ -315,11 +315,11 @@ if (BUILD_EMSCRIPTEN)
 	
 	message(STATUS "Setting compilation target to WASM")
 	set(CMAKE_EXECUTABLE_SUFFIX ".wasm.html")
-	set_target_properties(SampleMaterials PROPERTIES LINK_FLAGS "-s USE_SDL=2 -s USE_WEBGL2=1 -s FORCE_FILESYSTEM=1 -s FETCH=1 -s ALLOW_MEMORY_GROWTH=1 -s EXPORTED_FUNCTIONS=['_main','_main_resize'] -s EXPORTED_RUNTIME_METHODS=['ccall'] --preload-file ./BuiltIn --shell-file ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/Emscripten/Shell/shell.html --memory-init-file 1 --disable-shared -s WASM=1 -s BINARYEN_METHOD='native-wasm'")
+	set_target_properties(SampleMaterials PROPERTIES LINK_FLAGS "-s USE_SDL=2 -s USE_WEBGL2=1 -s FORCE_FILESYSTEM=1 -s FETCH=1 -s ALLOW_MEMORY_GROWTH=1 -s EXPORTED_FUNCTIONS=['_main','_main_resize'] -s EXPORTED_RUNTIME_METHODS=['ccall'] --preload-file ./BuiltIn --shell-file ${template_path}/Platforms/Emscripten/Shell/shell.html --memory-init-file 1 --disable-shared -s WASM=1 -s BINARYEN_METHOD='native-wasm'")
 	
 	set(project_name SampleMaterials)
-	configure_file(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/Emscripten/Index.html ${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/Index.html)
-	configure_file(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/Emscripten/Index.html ${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/SampleMaterials.html)
+	configure_file(${template_path}/Platforms/Emscripten/Index.html ${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/Index.html)
+	configure_file(${template_path}/Platforms/Emscripten/Index.html ${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/SampleMaterials.html)
 endif()
 
 #VLD
