--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,6 +158,8 @@ jobs:
 
   IOS:
     runs-on: macos-latest
+    env:
+      PLATFORM: SIMULATORARM64
     steps:
       - uses: actions/checkout@v1
       - name: Build
@@ -165,7 +167,7 @@ jobs:
           cd Assets
           python BuildAssetBundles.py
           cd ..
-          cmake -S . -B ./PrjIOS -G Xcode -DCMAKE_TOOLCHAIN_FILE=./ios.cmake -DPLATFORM=SIMULATORARM64
+          cmake -S . -B ./PrjIOS -G Xcode -DCMAKE_TOOLCHAIN_FILE=./ios.cmake -DPLATFORM=${PLATFORM}
           cd PrjIOS
           cmake --build . --config "Release"
           cd ..
@@ -173,14 +175,14 @@ jobs:
         run: |
           brew install p7zip
           mkdir Build
-          ls -l Bin/Release
+          ls -l Bin/${PLATFORM}/Release
           version=$(cat "Version.txt")
           file_version=${version//./_}
           output=SkylichtDemo_${file_version}_IOS.zip
-          cd Bin/Release
+          cd Bin/${PLATFORM}/Release
           7z a ${output} *.*
-          cd ../..
-          cp Bin/Release/${output} Build
+          cd ../../..
+          cp Bin/${PLATFORM}/Release/${output} Build
           ls -l Build
     #- name: Result
     #  uses: actions/upload-artifact@v1
