--- a/Samples/Lightmap/CMakeLists.txt
+++ b/Samples/Lightmap/CMakeLists.txt
@@ -294,6 +294,8 @@ elseif (BUILD_IOS)
 	# link framework
 	target_link_libraries(SampleLightmap "-framework UIKit")
 	target_link_libraries(SampleLightmap "-framework CoreGraphics")
+	target_link_libraries(SampleLightmap "-framework Metal")
+	target_link_libraries(SampleLightmap "-framework MetalKit")
 	target_link_libraries(SampleLightmap "-framework AudioToolbox")
 	target_link_libraries(SampleLightmap "-framework AVFAudio")
 else()
