--- a/Samples/Noise3D/CMakeLists.txt
+++ b/Samples/Noise3D/CMakeLists.txt
@@ -289,6 +289,8 @@ elseif (BUILD_IOS)
 	# link framework
 	target_link_libraries(SampleNoise3D "-framework UIKit")
 	target_link_libraries(SampleNoise3D "-framework CoreGraphics")
+	target_link_libraries(SampleNoise3D "-framework Metal")
+	target_link_libraries(SampleNoise3D "-framework MetalKit")
 	target_link_libraries(SampleNoise3D "-framework AudioToolbox")
 	target_link_libraries(SampleNoise3D "-framework AVFAudio")
 else()
