--- a/Samples/SkinnedMesh/CMakeLists.txt
+++ b/Samples/SkinnedMesh/CMakeLists.txt
@@ -292,6 +292,8 @@ elseif (BUILD_IOS)
 	# link framework
 	target_link_libraries(SampleSkinnedMesh "-framework UIKit")
 	target_link_libraries(SampleSkinnedMesh "-framework CoreGraphics")
+	target_link_libraries(SampleSkinnedMesh "-framework Metal")
+	target_link_libraries(SampleSkinnedMesh "-framework MetalKit")
 	target_link_libraries(SampleSkinnedMesh "-framework AudioToolbox")
 	target_link_libraries(SampleSkinnedMesh "-framework AVFAudio")
 else()
